tests/NormalTests/paczka1/small_fuzzy/29447460.err
Error in line 1: [o4e4HdLu A536 35,4
Error in line 4: oCwf9t0 S378 40,4
Error in line 3: 84nd A539 87,4
Error in line 10: 84nd A536 17,0
Error in line 14: 84nd S378 67,5
